--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 										<h2>Neuaro-Evolution agents in Atari Shut'em Ups </h2>
 									</header>
 									<a href="https://github.com/Jorest/Ramificacion-Neuro-evolutiva/blob/master/README.md" class="image fit"><img src="images/NEAT1.PNG" alt="" /></a>
-									<p>Proyect where I created populations of agents made to play Shut'em ups efitenltly,
+									<p>Proyect where I created populations of agents made to play Shut'em ups efficiently,
 										 by using Neuro-evolution (NEAT algorith).  </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Jorest/Ramificacion-Neuro-evolutiva" class="button">check it out</a></li>
