--- a/index.html
+++ b/index.html
@@ -19,18 +19,23 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Jorge's portfolio</h1>
+						</p> <font size="+3">Sroll down to se more</font> <p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
-
+	
 				<!-- Header -->
 					<header id="header">
+						<a href="index.html" class="logo">My Work</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
-				
+						<ul class="links">
+							<li class="active"><a href="index.html">Work</a></li>
+							<li><a href="bio.html">About Me</a></li>
+						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/jorge-garc%C3%ADa-45545790/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>						
 							<li><a href="https://github.com/Jorest" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -65,6 +70,7 @@
 									<p>JavaScript Game made using Phaser 3 framework
 										game made For Koji games
 									</p>
+									<br>
 									<ul class="actions special">
 										<li><a href="https://withkoji.com/~jorest/defender-2" class="button">check it out</a></li>
 									</ul>
@@ -78,7 +84,7 @@
 									<p>Proyect where I created populations of agents made to play Shut'em ups efficiently,
 										 by using Neuro-evolution (NEAT algorith).  </p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Jorest/Ramificacion-Neuro-evolutiva" class="button">check it out</a></li>
+										<li><a href="https://www.canva.com/design/DADxgGs4ces/phPG_6drAxn70WQU4e5p2g/view?utm_content=DADxgGs4ces&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="button">check it out</a></li>
 									</ul>
 								</article>
 
