--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Work</a></li>
 							<li><a href="bio.html">About Me</a></li>
+							<li><a href="resume.html">Resume</a></li>
+							
+
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/jorge-garc%C3%ADa-45545790/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>						
