links and coments

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 										<h2>JavaScript Base Defender Game</h2>
 									</header>
 									<a href="https://withkoji.com/~jorest/defender-2" class="image fit"><img src="images/Defender.jpg" alt="" /></a>
-									<p>JavaScript Game made using Phaser 3 framework
-										game made For Koji games
+									<p>Tower-Defense Game made using JavaScript and
+										the Phaser 3 framework, for Koji so users are able to remix it
 									</p>
 									<br>
 									<ul class="actions special">
-										<li><a href="https://withkoji.com/~jorest/defender-2" class="button">check it out</a></li>
+										<li><a href="https://withkoji.com/~jorest/defender-2" class="button">Play/Remix</a></li>
 									</ul>
 								</article>
 
@@ -87,7 +87,7 @@
 									<p>Proyect where I created populations of agents made to play Shut'em ups efficiently,
 										 by using Neuro-evolution (NEAT algorith).  </p>
 									<ul class="actions special">
-										<li><a href="https://www.canva.com/design/DADxgGs4ces/phPG_6drAxn70WQU4e5p2g/view?utm_content=DADxgGs4ces&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="button">check it out</a></li>
+										<li><a href="https://www.canva.com/design/DADxgGs4ces/phPG_6drAxn70WQU4e5p2g/view?utm_content=DADxgGs4ces&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="button">Presentation</a></li>
 									</ul>
 								</article>
 
@@ -99,7 +99,7 @@
 									<a href="https://codepen.io/jorest/full/WEbaLq" class="image fit"><img src="images/OPM1.PNG" alt="" /></a>
 									<p>Web memory game using JavaScript and CSS grid. Play a One Punch Man theme memory against an AI.</p>
 									<ul class="actions special">
-										<li><a href="https://codepen.io/jorest/pen/WEbaLq" class="button">check it out</a></li>
+										<li><a href="https://codepen.io/jorest/pen/WEbaLq" class="button">code</a></li>
 									</ul>
 								</article>
 
@@ -113,7 +113,7 @@
 										(work in progress)
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">check it out</a></li>
+										<li><a href="https://www.youtube.com/watch?v=QdlOUqGd9Kg" class="button">video</a></li>
 									</ul>
 								</article>
 							
