--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									</header>
 									<a href="https://github.com/Jorest/Ramificacion-Neuro-evolutiva/blob/master/README.md" class="image fit"><img src="images/NEAT1.PNG" alt="" /></a>
 									<p>Proyect where I created populations of agents made to play Shut'em ups efficiently,
-										 by using Neuro-evolution (NEAT algorith).  </p>
+										 by using Neuro-evolution (NEAT algorithm).  </p>
 									<ul class="actions special">
 										<li><a href="https://www.canva.com/design/DADxgGs4ces/phPG_6drAxn70WQU4e5p2g/view?utm_content=DADxgGs4ces&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="button">Check it out</a></li>
 									</ul>
