About me changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Jorge's portfolio</h1>
-						</p> <font size="+3">Sroll down to se more</font> <p>
+						</p> <font size="+3">Sroll down to see more</font> <p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -86,11 +86,10 @@
 										</h2>
 									</header>
 									<a  class="image fit">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/QdlOUqGd9Kg?controls=0&amp;start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/ni1B_gun6WA?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 									</a>
-									<p>Markless AR game, defend yourself from the Alien Invasion
-										(work in progress).
+									<p>Markless AR game, defend yourself from the Alien Invasion.
 									</p>
 									<br>
 									<ul class="actions special">
@@ -106,7 +105,7 @@
 									<a href="https://github.com/Jorest/Ramificacion-Neuro-evolutiva/blob/master/README.md" class="image fit">
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/WlZkesfjj2g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</a>
-									<p>Evolved a population of Neural-nets to maximize the score of a game. Then evoled the same population to play a different game.  </p>
+									<p>Evolved populations of Neural-nets to maximize the score of a game, with two different methods (Neuro-evolution).  </p>
 									<ul class="actions special">
 										<li><a href="https://www.canva.com/design/DADxgGs4ces/phPG_6drAxn70WQU4e5p2g/view?utm_content=DADxgGs4ces&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" class="button">Check it out</a></li>
 									</ul>
