--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="resume.html" class="logo">My Resume</a>
+						<a href="resume.html" class="logo">Resume</a>
 					</header>
 
 				<!-- Nav -->
