--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<h2>Monster Defender</h2>
 									</header>
 									<a href="https://withkoji.com/~jorest/defender-2" class="image fit">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/WdYtEDOQ3uQ?controls=0&amp;start=10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="100%" height="315" src="https://www.youtube.com/embed/WdYtEDOQ3uQ?controls=0&amp;start=10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</a>
 									<p>Tower-Defense game, where yo can upgrade your cannon. Users are able to easily change the assets (e.g colors, images, texts).
 									</p>
@@ -86,7 +86,7 @@
 										</h2>
 									</header>
 									<a  class="image fit">
-										<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wK2R1nAuHuE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/wK2R1nAuHuE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 									</a>
 									<p>Markless AR game, defend yourself from the Alien Invasion.
@@ -104,7 +104,7 @@
 										</h2>
 									</header>
 									<a href="https://codepen.io/jorest/full/WEbaLq" class="image fit">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/NNRfa7y4oWA?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="100%" height="315" src="https://www.youtube.com/embed/NNRfa7y4oWA?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									
 									</a>
 									<p>Web-based memory game. Play against a CPU that can remember the last played cards.</p>
@@ -119,7 +119,7 @@
 										<h2>NEAT Agents vs Shut'em Ups </h2>
 									</header>
 									<a href="https://github.com/Jorest/Ramificacion-Neuro-evolutiva/blob/master/README.md" class="image fit">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/WlZkesfjj2g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="100%" height="315" src="https://www.youtube.com/embed/WlZkesfjj2g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</a>
 									<p>Evolved a population of Neural-nets to maximize the score of a game. Then evoled the same population to play a different game.  </p>
 									<ul class="actions special">
@@ -152,7 +152,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li></li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
