--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li></li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+							<!--<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul> -->
 					</div>
 
 			</div>
