--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									</p>
 									<br>
 									<ul class="actions special">
-										<li><a href="https://github.com/Jorest/AR-Space-Invaders" class="button">Check it out</a></li>
+										<li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button">Check it out</a></li>
 									</ul>
 								</article>
 							
