--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
 
 								<article>
 									<header>
-										<h2>El Chavo PlayBook Acapulco
-										</h2>
+										<h2>El Chavo PlayBook Acapulco</h2>
 									</header>
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/BmLk8skGzQw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="100%" height="315" src="https://www.youtube.com/embed/BmLk8skGzQw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<p>Game designer for El Chavo Playbook an interactive reading adventure for kids. </p>
 									<br>
 									<ul class="actions special">
