--- a/index.html
+++ b/index.html
@@ -101,10 +101,23 @@
 
                 <article>
                     <header>
+                        <h2>El Chavo PlayBook</h2>
+                    </header>
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/BmLk8skGzQw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Game designer for El Chavo Playbook Acapulco, an interactive reading adventure for kids. </p>
+                    <br>
+                    <ul class="actions special">
+                        <li><a href="https://www.amazon.com/Lion-Works-Chavo-PlayBook-Acapulco/dp/B014VKOFPA/ref=sr_1_fkmr0_1?dchild=1&keywords=el+chavo+retro+acapulco&qid=1591224697&sr=8-1-fkmr0" class="button">Check it out</a></li>
+                    </ul>
+                </article>
+
+
+                <article>
+                    <header>
                         <h2>Monster Defender</h2>
                     </header>
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/WdYtEDOQ3uQ?controls=0&amp;start=10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Tower-Defense game, where you can upgrade your cannon. Users are able to easily change the assets (e.g colors, images, texts).
+                    <p>Tower-Defense game template, where you can upgrade your cannon. Users are able to easily change assets and stats.
                     </p>
                     <ul class="actions special">
                         <li><a href="https://withkoji.com/~jorest/defender-2" class="button">Check it out</a></li>
@@ -129,7 +142,7 @@
 
                 <article>
                     <header>
-                        <h2>Evoling N.E.A.T. Agents in Shut'em Ups </h2>
+                        <h2>Evoling N.E.A.T. Agents </h2>
                     </header>
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/WlZkesfjj2g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -139,17 +152,7 @@
                     </ul>
                 </article>
 
-                <article>
-                    <header>
-                        <h2>El Chavo PlayBook Acapulco</h2>
-                    </header>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/BmLk8skGzQw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Game designer for El Chavo Playbook an interactive reading adventure for kids. </p>
 
-                    <ul class="actions special">
-                        <li><a href="https://www.amazon.com/Lion-Works-Chavo-PlayBook-Acapulco/dp/B014VKOFPA/ref=sr_1_fkmr0_1?dchild=1&keywords=el+chavo+retro+acapulco&qid=1591224697&sr=8-1-fkmr0" class="button">Check it out</a></li>
-                    </ul>
-                </article>
 
                 <article>
 
