--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     </header>
 
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/2_5N-cCnC-c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p> Puzzle Platformer made for the Nokia Game-Jam 2020. The game only uses two colors and 84X48 pixels.
+                    <p>Designer and Programmer of Hatman, a Puzzle Platformer made for the Nokia Game-Jam 2020. The game only uses two colors and 84X48 pixels.
                     </p>
                     <ul class="actions special">
                         <li><a href="https://jorest.itch.io/hat-man-begins" class="button">Check it out</a></li>
