--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </h2>
                     </header>
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/vODKvrUHzQE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Markless AR game, defend yourself from the Alien Invasion.
+                    <p>Rogue-like AR game where you have to defend yourself from the Alien Invasion.
                     </p>
                     <ul class="actions special">
                         <li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button">Check it out</a></li>
@@ -91,8 +91,7 @@
                     </header>
 
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/2_5N-cCnC-c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Designer and Programmer of Hatman, a Puzzle Platformer made for the Nokia Game-Jam 2020. The game only uses two colors and 84X48 pixels.
-                    </p>
+                    <p>Designer and Programmer of Hatman, a Puzzle Platformer made for the Nokia Game-Jam 2020. </p>
                     <ul class="actions special">
                         <li><a href="https://jorest.itch.io/hat-man-begins" class="button">Check it out</a></li>
                     </ul>
