--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul class="links">
                 <li class="active"><a href="index.html">Work</a></li>
                 <li><a href="bio.html">About Me</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <!--  <li><a href="resume.html">Resume</a></li>  RESUME TAKEN DOWN FOR NOW -->
 
 
             </ul>
