--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
                 <!-- ADD WITH 100% TO ALL IFRAMES -->
 
 
+                <article>
+                    <header>
+                        <h2>Monster Match</h2>
+                    </header>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Sbm5foxu8Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Designer and Programmer of Monster Match. Pair up the monsters - your crystal ball will foretell which pairs are true love. Made for the GMTK jam 2021. </p>
+                    <ul class="actions special">
+                        <li><a href="https://imilkowski-dev.itch.io/monster-match" class="button">Check it out</a></li>
+                    </ul>
+                </article>
+
+
 
                 <article>
                     <header>
@@ -79,6 +92,7 @@
 
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/2_5N-cCnC-c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Designer and Programmer of Hatman, a Puzzle Platformer made for the Nokia Game-Jam 2020. </p>
+                    <br>
                     <ul class="actions special">
                         <li><a href="https://jorest.itch.io/hat-man-begins" class="button">Check it out</a></li>
                     </ul>
@@ -87,12 +101,10 @@
 
                 <article>
                     <header>
-                        <h2>AR Space Invaders
-                        </h2>
+                        <h2>AR Space Invaders</h2>
                     </header>
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/vODKvrUHzQE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Rogue-like AR game where you have to defend yourself from the Alien Invasion.
-                    </p>
+                    <p>Rogue-like AR game where you have to defend yourself from the Alien Invasion.</p>
                     <ul class="actions special">
                         <li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button">Check it out</a></li>
                     </ul>
@@ -105,7 +117,6 @@
                     </header>
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/BmLk8skGzQw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Game designer for El Chavo Playbook Acapulco, an interactive reading adventure for kids. </p>
-                    <br>
                     <ul class="actions special">
                         <li><a href="https://www.amazon.com/Lion-Works-Chavo-PlayBook-Acapulco/dp/B014VKOFPA/ref=sr_1_fkmr0_1?dchild=1&keywords=el+chavo+retro+acapulco&qid=1591224697&sr=8-1-fkmr0" class="button">Check it out</a></li>
                     </ul>
@@ -121,22 +132,6 @@
                     </p>
                     <ul class="actions special">
                         <li><a href="https://withkoji.com/~jorest/defender-2" class="button">Check it out</a></li>
-                    </ul>
-                </article>
-
-
-
-                <article>
-                    <header>
-                        <h2>AI dogo memory
-                        </h2>
-                    </header>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/NNRfa7y4oWA?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-                    <p>Web-based memory game. Play against a CPU that can remember the last played cards.</p>
-                    <br>
-                    <ul class="actions special">
-                        <li><a href="https://codepen.io/jorest/full/WEbaLq" class="button">Check it out</a></li>
                     </ul>
                 </article>
 
