style featured posts

--- a/index.html
+++ b/index.html
@@ -52,36 +52,37 @@
         <!-- Main -->
         <div id="main">
 
-            <!-- Featured 
-							<article class="post featured">
-								<header class="major">
-									<h2>Hello I am Jorge <br/>
-									</h2>
-									<p>I am Computer Science engenieer pasionate about game development, game desing, and AI :) </p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">check it out</a></li>
-								</ul>
-							</article>
-						Post -->
-            <!-- Posts -->
+
+            <article class="post featured">
+                <header class="major">
+                    <h2>Monster match <br/>
+                    </h2>
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/Sbm5foxu8Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Designer and Programmer of Monster Match. Pair up the monsters - your crystal ball will foretell which pairs are true love. Made for the GMTK jam 2021.(I am not the one talking in the video) </p>
+                </header>
+                <ul class="actions special">
+                    <li><a href="#" class="button large">check it out</a></li>
+                </ul>
+            </article>
+
+            <article class="post featured">
+                <header class="major">
+                    <h2>AR Space Invaders</h2>
+
+                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/vODKvrUHzQE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Rogue-like AR game where you have to defend yourself from the Alien Invasion.</p>
+                </header>
+                <ul class="actions special">
+                    <li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button">Check it out</a></li>
+                </ul>
+            </article>
+
             <section class="posts">
 
                 <!-- ADD WITH 100% TO ALL IFRAMES -->
 
 
-                <article>
-                    <header>
-                        <h2>Monster Match</h2>
-                    </header>
 
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Sbm5foxu8Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Designer and Programmer of Monster Match. Pair up the monsters - your crystal ball will foretell which pairs are true love. Made for the GMTK jam 2021. </p>
-                    <ul class="actions special">
-                        <li><a href="https://imilkowski-dev.itch.io/monster-match" class="button">Check it out</a></li>
-                    </ul>
-                </article>
 
 
 
@@ -90,7 +91,7 @@
                         <h2>Hatman</h2>
                     </header>
 
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/2_5N-cCnC-c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="350" src="https://www.youtube.com/embed/2_5N-cCnC-c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Designer and Programmer of Hatman, a Puzzle Platformer made for the Nokia Game-Jam 2020. </p>
                     <br>
                     <ul class="actions special">
@@ -101,21 +102,9 @@
 
                 <article>
                     <header>
-                        <h2>AR Space Invaders</h2>
-                    </header>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/vODKvrUHzQE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Rogue-like AR game where you have to defend yourself from the Alien Invasion.</p>
-                    <ul class="actions special">
-                        <li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button">Check it out</a></li>
-                    </ul>
-                </article>
-
-
-                <article>
-                    <header>
                         <h2>El Chavo PlayBook</h2>
                     </header>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/BmLk8skGzQw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="350" src="https://www.youtube.com/embed/BmLk8skGzQw?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Game designer for El Chavo Playbook Acapulco, an interactive reading adventure for kids. </p>
                     <ul class="actions special">
                         <li><a href="https://www.amazon.com/Lion-Works-Chavo-PlayBook-Acapulco/dp/B014VKOFPA/ref=sr_1_fkmr0_1?dchild=1&keywords=el+chavo+retro+acapulco&qid=1591224697&sr=8-1-fkmr0" class="button">Check it out</a></li>
@@ -127,7 +116,7 @@
                     <header>
                         <h2>Monster Defender</h2>
                     </header>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/WdYtEDOQ3uQ?controls=0&amp;start=10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="350" src="https://www.youtube.com/embed/WdYtEDOQ3uQ?controls=0&amp;start=10" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Tower-Defense game template, where you can upgrade your cannon. Users are able to easily change assets and stats.
                     </p>
                     <ul class="actions special">
@@ -139,7 +128,7 @@
                     <header>
                         <h2>Evoling N.E.A.T. Agents </h2>
                     </header>
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/WlZkesfjj2g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="350" src="https://www.youtube.com/embed/WlZkesfjj2g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <p>Evolved a population of Neural-nets to maximize the score of a game. Then evolved the same population to play a different game.</p>
                     <ul class="actions special">
