--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li class="active"><a href="index.html">Work</a></li>
+                <li class="active"><a href="index.html">Projects</a></li>
+                <li><a href="index2.html">Participated In</a></li>
                 <li><a href="bio.html">About Me</a></li>
+
+
                 <!--  <li><a href="resume.html">Resume</a></li>  RESUME TAKEN DOWN FOR NOW -->
 
 
@@ -57,11 +60,11 @@
                 <header class="major">
                     <h2>Monster match <br/>
                     </h2>
-                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/Sbm5foxu8Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="90%" height="500" src="https://www.youtube.com/embed/Sbm5foxu8Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p>Designer and Programmer of Monster Match. Pair up the monsters - your crystal ball will foretell which pairs are true love. Made for the GMTK jam 2021.(I am not the one talking in the video) </p>
                 </header>
                 <ul class="actions special">
-                    <li><a href="#" class="button large">check it out</a></li>
+                    <li><a href="https://imilkowski-dev.itch.io/monster-match" class="button large">check it out</a></li>
                 </ul>
             </article>
 
@@ -69,11 +72,11 @@
                 <header class="major">
                     <h2>AR Space Invaders</h2>
 
-                    <iframe width="100%" height="500" src="https://www.youtube.com/embed/vODKvrUHzQE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Rogue-like AR game where you have to defend yourself from the Alien Invasion.</p>
+                    <iframe width="90%" height="500" src="https://www.youtube.com/embed/vODKvrUHzQE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Solo Project: Defend yourself from the Alien invasion in this Rogue-like AR game, where you fight the alien-ships that arrived on your location!</p>
                 </header>
                 <ul class="actions special">
-                    <li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button">Check it out</a></li>
+                    <li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button large">Check it out</a></li>
                 </ul>
             </article>
 
