--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="intro">
             <h1>Jorge's portfolio</h1>
             </p>
-            <font size="+3">Sroll down to see more</font>
+            <font size="+3">Scroll down to see more</font>
             <p>
                 <ul class="actions">
                     <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -31,13 +31,13 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo">Projects</a>
+            <a href="index.html" class="logo">Personal Projects</a>
         </header>
 
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li class="active"><a href="index.html">Projects</a></li>
+                <li class="active"><a href="index.html">Personal Projects</a></li>
                 <li><a href="index2.html">Participated In</a></li>
                 <li><a href="bio.html">About Me</a></li>
 
