--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li><a href="index.html">Projects</a></li>
+                <li><a href="index.html">Personal Projects</a></li>
                 <li class="active"> <a href="index2.html"> Participated In </a> </li>
                 <li><a href="bio.html">About Me</a></li>
 
