--- a/index2.html
+++ b/index2.html
@@ -71,6 +71,18 @@
             </article>
 
 
+            <article class="post featured">
+                <header class="major">
+                    <h2>Tri-Theater </h2>
+
+                    <iframe width="100%" height="600" src="https://www.youtube.com/embed/7rBmiHssP4E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <p>Virtual Production using Unreal engine 4 with the HTC Vive for the tracking of the camera and the Rokoko-suit to track the body. </p>
+
+                </header>
+
+            </article>
+
 
             <!-- Footer -->
             <!-- Footer -->
