--- a/index2.html
+++ b/index2.html
@@ -40,6 +40,7 @@
                 <li><a href="index.html">Personal Projects</a></li>
                 <li class="active"> <a href="index2.html"> Participated In </a> </li>
                 <li><a href="bio.html">About Me</a></li>
+                <li><a href="design.html">Design Docs</a></li>
 
                 <!--  <li><a href="resume.html">Resume</a></li>  RESUME TAKEN DOWN FOR NOW -->
 
