--- a/design.html
+++ b/design.html
@@ -37,10 +37,10 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li class="active"><a href="index.html">Personal Projects</a></li>
+                <li><a href="index.html">Personal Projects</a></li>
                 <li><a href="index2.html">Participated In</a></li>
                 <li><a href="bio.html">About Me</a></li>
-                <li><a href="design.html">Design Docs</a></li>
+                <li class="active"><a href="design.html">Design Docs</a></li>
 
 
                 <!--  <li><a href="resume.html">Resume</a></li>  RESUME TAKEN DOWN FOR NOW -->
