upgaded after hackaton

--- a/index2.html
+++ b/index2.html
@@ -57,6 +57,22 @@
 
             <article class="post featured">
                 <header class="major">
+                    <h2>VR4VET 2022-2023 <br/>
+                    </h2>
+                    <img src="images/vr4vet.png" width="100%" height="600"/>
+                    <p> VR4VET is a partnership in applying virtual reality for vocational education and career guidance, providing a standard of excellence in this area.
+                    </p>
+
+                </header>
+                <ul class="actions special">
+                    <li><a href="https://github.com/vr4vet/vr4vet" class="button large">check it out</a></li>
+                </ul>
+            </article>
+
+
+
+            <article class="post featured">
+                <header class="major">
                     <h2>Derpy Conga <br/>
                     </h2>
                     <iframe width="100%" height="600" src="https://www.youtube.com/embed/59WiaAgH5n0?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
