--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div id="wrapper" class="fade-in">
         <!-- Intro -->
         <div id="intro">
-            <h1>Jorge's portfolio</h1>
+            <h1>Hi! my name is Jorge <br>
+                I am an XR Developer and Game Designer</h1>
             </p>
             <font size="+3">Scroll down to see more</font>
             <p>
@@ -60,6 +61,20 @@
 
             <article class="post featured">
                 <header class="major">
+                    <h2>Elements Together
+                        (XR Hack 2024)</h2>
+
+                    <iframe width="90%" height="500" src="https://www.youtube.com/embed/Xjf_mPekG_0?si=t9t9CSsS4_yLSyLq&amp;controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Mixed reality co-op game designed to be experienced with friends in the same physical space. Each player has unique elemental powers they can cast by using different hand gesture. To defeat your enemies, you need to collaborate with your friend, combining the elemental attacks.   </p>
+                </header>
+                <ul class="actions special">
+                    <li><a href="https://devpost.com/software/elements-together" class="button large">Check it out</a></li>
+                </ul>
+            </article>
+
+
+            <article class="post featured">
+                <header class="major">
                     <h2>Monster match <br/>
                     </h2>
                     <iframe width="90%" height="500" src="https://www.youtube.com/embed/Sbm5foxu8Oo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -67,18 +82,6 @@
                 </header>
                 <ul class="actions special">
                     <li><a href="https://imilkowski-dev.itch.io/monster-match" class="button large">check it out</a></li>
-                </ul>
-            </article>
-
-            <article class="post featured">
-                <header class="major">
-                    <h2>AR Space Invaders</h2>
-
-                    <iframe width="90%" height="500" src="https://www.youtube.com/embed/vODKvrUHzQE?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <p>Solo Project: Defend yourself from the Alien invasion in this Rogue-like AR game, where you fight the alien-ships that arrived on your location!</p>
-                </header>
-                <ul class="actions special">
-                    <li><a href="https://play.google.com/store/apps/details?id=com.LivingGames.ARInvader1" class="button large">Check it out</a></li>
                 </ul>
             </article>
 
