--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
 
             </ul>
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/jorge-gamedev/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+                <li><a href="https://www.linkedin.com/in/jorest-dev/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
                 <li><a href="https://github.com/Jorest" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
             </ul>
         </nav>
