--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo">Personal Projects</a>
+            <a href="index.html" class="logo">Projects</a>
         </header>
 
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li class="active"><a href="index.html">Personal Projects</a></li>
+                <li class="active"><a href="index.html">Projects</a></li>
                 <li><a href="index2.html">Participated In</a></li>
                 <li><a href="bio.html">About Me</a></li>
               <!--  <li><a href="design.html">Design Docs</a></li>-->
@@ -72,6 +72,18 @@
                 </ul>
             </article>
 
+            <article class="post featured">
+                <header class="major">
+                    <h2>MoleculeSim-VRChat
+                    </h2>
+
+                    <iframe width="90%" height="500" src="https://www.youtube.com/embed/lPPXMkH3nzk?si=PRYlGDSFvA3Y_LdP&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <p>This VR application simulates the behavior of atoms given an XYZ data set on VRChat! Made using C# and Udon# in Unity </p>
+                </header>
+                <ul class="actions special">
+                    <li><a href="https://github.com/Jorest/MoleculeSim-VRChat" class="button large">Check it out</a></li>
+                </ul>
+            </article>
 
             <article class="post featured">
                 <header class="major">
